--- a/BismNormalizer/BismNormalizer.csproj
+++ b/BismNormalizer/BismNormalizer.csproj
@@ -193,6 +193,8 @@
     <Compile Include="TabularCompare\DeploymentMessageEventArgs.cs" />
     <Compile Include="TabularCompare\Enums.cs" />
     <Compile Include="TabularCompare\PasswordPromptEventArgs.cs" />
+    <Compile Include="TabularCompare\TabularMetadata\MDependency.cs" />
+    <Compile Include="TabularCompare\TabularMetadata\MDependencyCollection.cs" />
     <Compile Include="TabularCompare\UI\HighDpiUtils.cs" />
     <Compile Include="TabularCompare\ValidationMessageEventArgs.cs" />
     <Compile Include="DemoHarness.cs" />
