--- a/BismNormalizer/Settings.settings
+++ b/BismNormalizer/Settings.settings
@@ -62,5 +62,11 @@
     <Setting Name="OptionMergeCultures" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="OptionRetainPartitions" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="OptionHighDpiLocal" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
