--- a/BismNormalizer/app.config
+++ b/BismNormalizer/app.config
@@ -67,6 +67,12 @@
             <setting name="OptionMergeCultures" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="OptionRetainPartitions" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="OptionHighDpiLocal" serializeAs="String">
+                <value>False</value>
+            </setting>
         </BismNormalizer.Settings>
     </userSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" /></startup>
